--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Octive Holding Company</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"><link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <!--Client's Section -->
+  <!--Companies Section -->
   <section class="clients" id="page-clients">
     <div class="content">
       <h1>Our Companies Include...</h1>
@@ -73,3 +73,17 @@
       </div>
     </div>
   </section>
+
+ <!--Contact's Section -->
+  <section class="contact" id="page-contact">
+    <div class="content">
+      <h1>Where You Can Visit Us...</h1>
+      <h2>We are a holding company.</h2>
+      <h3>You can find us at the address-Times Square, Manhattan, NY 10036
+      or to become one of our companies you can give us a call 720-934-3521</h3>
+      <div class="map-container"></div>
+    </div>
+  </section>
+</main>
+</body>
+</html>
