For some reason my project is not deploying correctly. I think it has to do with my commits

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Octive Holding Company</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"><link rel="stylesheet" href="./style.css">
-</head>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
+</head>
 <body>
 <!-- Side Navigation Bar -->
 <input type="checkbox" id="checkbox" /><label class="fa fa-bars fa-2x" for="checkbox"></label>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <!--Companies Section -->
+  <!--Client's Section -->
   <section class="clients" id="page-clients">
     <div class="content">
       <h1>Our Companies Include...</h1>
@@ -74,7 +74,7 @@
     </div>
   </section>
 
- <!--Contact's Section -->
+  <!--Contact's Section -->
   <section class="contact" id="page-contact">
     <div class="content">
       <h1>Where You Can Visit Us...</h1>
